--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-toast": "^1.2.14",
+    "@splidejs/react-splide": "^0.7.12",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.10.13",
     "@tailwindcss/vite": "^4.1.10",
@@ -28,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-router-hash-link": "^2.4.3",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "tailwindcss-radix": "^4.0.2"
